Fixes alignment and refactors

--- a/client/stylesheets/form.import.styl
+++ b/client/stylesheets/form.import.styl
@@ -56,26 +56,6 @@ section
         font-weight bold
         font-size 15px
 
-h2
-  font-size 32px
-  color primary
-  margin-bottom 20px
-  margin-top 0
-  
-h3
-  font-size 20px
-  margin-top 0
-  margin-bottom 15px
-  color secondary
-
-h2.section-title
-  font-size 40px
-  margin-top 0
-
-h2 a.more-info
-  font-size 12px
-  color btn-default
-
 .form-control
   margin-bottom 15px
 
